--- a/sass/site/header/_header-layouts.scss
+++ b/sass/site/header/_header-layouts.scss
@@ -141,8 +141,7 @@
 			display: flex;
 			justify-content: center;
 		}
-		.site-branding,
-		.ast-mobile-menu-buttons {
+		.site-branding {
 			padding-bottom: 1em;
 		}
 	    .main-header-bar-navigation,
